quarto render after correct another typo in cv.qmd

--- a/cv.qmd
+++ b/cv.qmd
@@ -46,7 +46,7 @@ mar – ago 2022 | Unesp/DGPA | Professora Substituta | Docente na disciplina de
 
 - Inglês (avançado)
 
-- Espanhol (basico a intermediário)
+- Espanhol (básico a intermediário)
 
 ### Programacão
 
@@ -56,7 +56,7 @@ Python (numpy, scipy, pandas, geopandas, polars, scikit-learn, matplotlib, seabo
 
 ### Ciência de Dados
 
-Coleta, tratamento, analise exploratória e visualização de dados, estatística descritiva e inferencial, aprendizado supervisionado (classificação e regressão), aprendizado não supervisionado (*clustering*).
+Coleta, tratamento, análise exploratória e visualização de dados, estatística descritiva e inferencial, aprendizado supervisionado (classificação e regressão), aprendizado não supervisionado (*clustering*).
 
 ### Cursos
 
