--- a/index.qmd
+++ b/index.qmd
@@ -21,4 +21,4 @@ Com experiência comprovada como analista de dados, recentemente concluí um MBA
 
 Gosto de programação pela versatilidade de alcançar um mesmo objetivo de diversas maneiras e pela possibilidade de aliar criatividade à solução de problemas.
 
-Ajudo pessoas e empresas a encontrar oportunidades para otimizar processos, simplificando e automatizando tarefas e rotinas.
+Ajudo pessoas e empresas a otimizar processos, simplificando e automatizando tarefas e rotinas.
