--- a/cv.qmd
+++ b/cv.qmd
@@ -20,43 +20,11 @@ about:
 
 ## Habilidades
 
-QGIS, Sensoriamento Remoto Baseado em Nuvem (Google Earth Engine - GEE)
+Sistemas de Informações Geográficas (QGIS).
 
-Python: statsmodels, scipy, numpy, pandas, geopandas, polars, scikit-learn, matplotlib, seaborn, plotly, pyspark, tensorflow.
+Linguagens de programação (Python | R).
 
-R: Tidyverse, ggplot2, Shiny, R markdown.
-
-Git, Jupyter, LaTeX, SQL (Google BigQuery), Quarto
-
-
-### Cursos
-
-2024 — Advanced SQL (Kaggle)
-
-2024 — Intro do SQL (Kaggle)
-
-2023 — Data Analysis with Python (freeCodeCamp)
-
-2021 — Python para Processamento de Linguagem Natural (ICMC/USP)
-
-2020 — R Programming - Johns Hopkins University (Coursera)
-
-2020 — Quantitative Methods - University of Amsterdam (Coursera)
-
-2015 - 2016 — Introdução ao QGIS (UFSCar)
-
-
-## Experiência profissional
-
-2023 - atual | freeCodeCamp | Tradutora de tutoriais de análise de dados e programação em Python | Tradução de tutoriais do Inglês (EUA) para o Português (BR).
-
-mar – ago 2022 | Unesp/DGPA | Professora substituta de Estatística | Docente na disciplina de Quantificação em Geografia para as turmas integral e noturno da Graduação em Geografia.
-
-2020 – 2022 | Menzori Engenharia e Agrimensura Ltda | Assistente de automação de projetos | Elaboração de plano de rotas viárias urbanas (SIG) e auxílio na formatação de projetos digitais (CAD). 
-
-2018 – 2019 | UFSCar/PPGCAm | Analista ambiental | Contribuição para emissão de parecer técnico referente à atividade minerária.
-
-2017 – 2018 | UFSCar/PPGCAm | Analista de dados | Coleta, tabulação, tratamento e análise estatística descritiva de dados provenientes de documentos e processos judiciais de órgãos públicos (CETESB, SMA/CFA, MPE, dentre outros). Elaboração de mapas temáticos.
+Versionamento de código (GitHub).
 
 
 ## Idiomas
@@ -66,13 +34,24 @@ Inglês (avançado)
 Espanhol (básico a intermediário)
 
 
+## Cursos
+
+2023 — Data Analysis with Python (freeCodeCamp)
+
+2021 — Python para Processamento de Linguagem Natural (ICMC/USP)
+
+2020 — Quantitative Methods - University of Amsterdam (Coursera)
+
+2015 - 2016 — Introdução ao QGIS (UFSCar)
+
+
 ## Formação acadêmica
 
-2023 – 2024 | USP - Instituto de Ciências Matemáticas e de Computação (ICMC) | MBA em Ciência de Dados
+2023 – 2024 | Universidade de São Paulo (USP) | MBA em Ciência de Dados
 
-2019 – 2023 |  Unesp - Instituto de Geociências e Ciências Exatas (IGCE) | Doutorado em Geografia
+2019 – 2023 | Universidade Estadual Paulista (Unesp) | Doutorado em Geografia
 
-2015 – 2017 | UFSCar - Centro de Ciências Exatas e de Tecnologia (CCET) | Mestrado em Engenharia Urbana
+2015 – 2017 | Universidade Federal de São Carlos (UFSCar) | Mestrado em Engenharia Urbana
 
-2011 – 2014 | UFSCar - Departamento de Ciências Ambientais (DCAm) | Bacharelado em Gestao e Análise Ambiental
+2011 – 2014 | Universidade Federal de São Carlos (UFSCar) | Graduação em Gestão e Análise Ambiental
 
