--- a/index.qmd
+++ b/index.qmd
@@ -17,8 +17,8 @@ about:
       href: mailto:icn.sousa@outlook.com
 ---
         
-Com experiência comprovada como analista de dados, recentemente concluí um MBA em Ciência de Dados pela USP, consolidando meus conhecimentos em temas como Aprendizado de Máquina (*Machine Learning*) supervisionado e não supervisionado.
+Tenho experiência com coleta e manipulação de dados estruturados e geoespaciais de diversas fontes (ex.: IBGE, SEADE, MapBiomas, etc.), via linguagens de programação (Python) e uso de Sistemas de Informações Geográficas (QGIS). 
 
-Gosto de programação pela versatilidade de alcançar um mesmo objetivo de diversas maneiras e pela possibilidade de aliar criatividade à solução de problemas.
+Realizei análises exploratórias (estatística descritiva) e testes de hipóteses (estatística inferencial), além de ter aplicado técnicas de aprendizado não supervisionado para agrupamento de dados (clustering).
 
-Ajudo pessoas e empresas a otimizar processos, simplificando e automatizando tarefas e rotinas.
+Também construí modelos preditivos de Machine Learning e elaborei visualizações de dados. Atualmente presto serviços de consultoria em geoprocessamento para projetos voltados ao planejamento urbano e ambiental, bem como automação de tarefas e rotinas para otimização de processos de negócios.
