--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,6 @@ about:
         
 Tenho experiência com coleta e manipulação de dados estruturados e geoespaciais de diversas fontes (ex.: IBGE, SEADE, MapBiomas, etc.), via linguagens de programação (Python) e uso de Sistemas de Informações Geográficas (QGIS). 
 
-Realizei análises exploratórias (estatística descritiva) e testes de hipóteses (estatística inferencial), além de ter aplicado técnicas de aprendizado não supervisionado para agrupamento de dados (clustering).
+Já realizei análises exploratórias (estatística descritiva) e testes de hipóteses (estatística inferencial), além de ter aplicado técnicas de aprendizado não supervisionado para agrupamento de dados (clustering). Também construí modelos preditivos de Machine Learning e elaborei visualizações de dados.
 
-Também construí modelos preditivos de Machine Learning e elaborei visualizações de dados. Atualmente presto serviços de consultoria em geoprocessamento para projetos voltados ao planejamento urbano e ambiental, bem como automação de tarefas e rotinas para otimização de processos de negócios.
+Atualmente presto serviços de consultoria em geoprocessamento para projetos voltados ao planejamento urbano e ambiental, bem como automação de tarefas e rotinas para otimização de processos de negócios.
